examples/negative/ffi/legacy_extern_c_axiom.kai
# Negative fixture (#511 / FFI contract): the legacy
# `[<extern_c>] axiom` syntax was removed in issue #260. Source
# using it must be rejected with a migration message pointing to
# `extern "C" fn`.

[<extern_c>]
axiom puts(s: String) : Int / Ffi

fn main() : Unit / Ffi = {
  let _ = puts("never reached")
}
